JS functions, settimeout, interval, parseInt etc

--- a/js/test.html
+++ b/js/test.html
@@ -1,13 +1,25 @@
 <html lang="en">
 <head>
     <title>JS Example</title>
+    
+    <style>
+        #d1{
+            background-color: red;
+            width: 100px;
+            height: 100px;
+            border-radius: 100%;
+            position: relative;
+            left: 10px;
+        }
+    </style>
 </head>
 <body>
         <h1>JS Example</h1>
         <input type="text" id="username" name="username" value="" onblur="test()" />
         <input type="button" name="test" value="click" id="btn" />
+        <input type="button" name="" value="Move" id="btn1" />
         <p id="msg"></p>
-
+        <div id="d1"></div>
         <script src="script.js"></script>
 </body>
 </html>
